--- a/src/style.scss
+++ b/src/style.scss
@@ -1,13 +1,34 @@
 .downloader-helper-container {
     cursor: pointer;
-    display: block;
-    top: 0;
-    left: 0;
-    opacity: 1;
+    display: flex;
+    gap: 5px;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
     position: absolute;
     z-index: 99999;
     user-select: none;
-    //pointer-events: none;
-    width: 16px;
-    height: 16px;
+    text-align: center;
+
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 5px;
+    background-color: #fff;
+    opacity: 0.8;
+
+    align-items: center;
+
+    svg {
+        display: block;
+        pointer-events: none;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background-color: #fff;
+        color: green;
+    }
+}
+
+.downloader-helper-container:hover {
+    opacity: 1;
 }
