--- a/src/style.scss
+++ b/src/style.scss
@@ -10,9 +10,9 @@
     user-select: none;
     text-align: center;
 
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    padding: 5px;
+    border-radius: 5px !important;
+    border: 1px solid #ccc !important;
+    padding: 5px !important;
     background-color: #fff;
     opacity: 0.8;
 
