--- a/src/style.scss
+++ b/src/style.scss
@@ -33,6 +33,21 @@
     opacity: 1;
 }
 
+.td-downloader-message {
+    display: block;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    pointer-events: none;
+    z-index: 99998;
+    padding: 8px 8px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color: #fff;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
 .td-downloader-list {
     li {
         padding: 10px 10px;
